echo-server/echo-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: test
spec:
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 9000
    targetPort: 9000
