echo-server/echo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: test
  annotations:
    cert-manager.io/issuer: test-ca-issuer
spec:
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: echo-service
            port:
              number: 9000
  tls:
  - hosts:
    - echo.info
    secretName: echo-cert
